# Public_content

./: .env_sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
main/: urls.py  views.py
main/templates/main/: base.html  main.html
main/templates/main/includes/: head.html  nav.html
posts/: admin.py  forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_posts_options_alter_posts_title.py
posts/templates/posts/: posts_detail.html  posts_list.html  posts_my_confirm_delete.html  posts_my_detail.html  posts_my_form.html  posts_my_list.html
subscriptions/: admin.py  models.py  services.py  tasks.py  views.py
subscriptions/migrations/: 0001_initial.py
subscriptions/templates/subscriptions/: subscriptions_list.html
users/: forms.py  models.py  tests.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html
