[tool.poetry]
name = "public-content"
version = "0.1.0"
description = ""
authors = ["denanmax <deshis93@gmail.com>"]
readme = "README.md"
packages = [{include = "public_content"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"
requests = "^2.31.0"
redis = "^5.0.1"
celery = "^5.3.6"
psycopg2-binary = "^2.9.9"
django-celery-beat = "^2.5.0"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
